# rng

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_dieharder.sh
examples/: basic_usage.py
src/spingo_games_rng/: __init__.py  core.py  crash.py  seeds.py
tests/: _streams.py  dieharder_feed.py  test_core.py  test_crash.py
